# mods

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
docs/_static/: custom.css
src/mods/: __init__.py  buckling.py  datasets.py  failure.py  mods.py  strain_transformation.py  stress_transformation.py
src/mods/data/: avg_mech_prop_imperial.csv  avg_mech_prop_si.csv  w_shapes_fps_imperial.csv  w_shapes_fps_si.csv
tests/: test_mods.py
