[tool.poetry]
name = "mods"
version = "0.1.0"
description = "Functions that implement equations from Mechanics of Materials by R.C. Hibbeler."
authors = ["John You"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
