[tool.poetry]
name = "mods"
version = "0.1.0"
description = "Functions that implement equations from Mechanics of Materials by R.C. Hibbeler."
authors = ["John You"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
matplotlib = ">=3.7.1"
numpy = ">=1.24.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^0.17.2", python = "^3.9"}
sphinx-autoapi = "^2.1.0"
sphinx-rtd-theme = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
